--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       font-family: "Montserrat",system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
       color:#213;
       line-height:1.35;
-      /* Nice dashboard bkgd: */
-      background: linear-gradient(120deg, #f1f4f8 0%, #c2ebd6 40%, #e3ecf9 100%);
+      background:linear-gradient(120deg, #f1f4f8 0%, #c2ebd6 40%, #e3ecf9 100%);
       min-height:100vh;
     }
     .dashboard-bg {
@@ -27,8 +26,7 @@
     }
     .sidebar{
       position:fixed;left:0;top:0;bottom:0;width:350px;max-width:98vw;
-      background:#1b5e33;
-      z-index:2000;
+      background:#1b5e33;z-index:2000;
       padding:22px 12px 24px 18px;overflow-y:auto;display:none;
       box-shadow: 0 10px 40px rgba(27, 94, 51, 0.18);
       transition:all 0.21s;
@@ -61,11 +59,50 @@
     .btn {padding:9px 14px;border-radius:9px;border:none;cursor:pointer;font-weight:600}
     .btn.login{background:transparent;border:1px solid #ddd;color:#175a30}
     .btn.cta{background:#1e7b3f;color:#fff;}
-    /* ---- GRID ---- */
+    .hero{
+      margin:28px 0 0 0;
+      border-radius:18px;
+      background:linear-gradient(135deg,#e8f7ee,#f1f9f2);
+      box-shadow:0 20px 40px rgba(25,111,61,0.06);
+      display:flex;align-items:center;justify-content:space-between;gap:30px;
+      padding:42px 42px 28px 42px;min-height:160px;
+    }
+    .hero .left{max-width:72%;}
+    .hero h1{font-size:34px;line-height:1.02;color:#114b27;margin-bottom:8px;font-weight:800;}
+    .hero p{color:#2c5b3a;opacity:0.97;font-size:17px;}
+    .hero .cta-row{margin-top:16px;display:flex;gap:12px}
+    .hero .cta{padding:10px 16px;border-radius:12px;border:none;cursor:pointer;font-weight:700}
+    .hero .cta.primary{background:#1e7b3f;color:#fff;box-shadow:0 10px 26px rgba(30,123,63,0.12)}
+    .hero .cta.ghost{background:transparent;border:1px solid #d6eee0;color:#1e7b3f}
+    .hero .right{
+      width:320px;height:120px;border-radius:12px;background-image:url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&w=700&fit=crop');
+      background-size:cover;background-position:center;
+      box-shadow:inset 0 0 0 120px rgba(255,255,255,0.18);
+      display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;
+      text-shadow:0 4px 20px rgba(0,0,0,0.3)
+    }
+    .section{
+      display:grid;grid-template-columns:1fr 420px;gap:32px;max-width:1300px;margin:32px auto 0 auto;
+    }
+    .card-large{
+      border-radius:18px;background:#fff;padding:32px 32px 20px 32px;box-shadow:0 10px 30px rgba(16,64,28,0.06);
+      font-size:17px;
+    }
+    .about h3{color:#1b6b36;margin-bottom:10px;font-size:22px;}
+    .about p{color:#2c4d3a;opacity:.93;font-size:17px;}
+    .news-box{border-radius:18px;background:linear-gradient(180deg,#fff,#fbfffd);padding:22px;box-shadow:0 10px 28px rgba(16,64,28,0.08)}
+    .news-box h3{color:#1b6b36;margin-bottom:12px;font-size:18px;}
+    .news-scroll{height:175px;overflow:hidden;position:relative}
+    .news-track{
+      display:flex;flex-direction:column;gap:9px;
+      animation:newsScroll 12s linear infinite;
+    }
+    .news-item{font-size:15px;color:#264c36;padding:8px 2px;margin-left:5px;background:linear-gradient(90deg,rgba(40,120,60,0.03),transparent);border-radius:7px}
+    @keyframes newsScroll {0%{transform: translateY(0%);}100%{transform: translateY(-50%);}}
     .grid{
       margin:0;
       display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(340px,1fr));
+      grid-template-columns:repeat(auto-fit,minmax(330px,1fr));
       gap:18px;
     }
     .big-card{
@@ -85,6 +122,7 @@
     .overlay-yellow{background:linear-gradient(135deg, rgba(255,195,79,0.6), rgba(255,143,0,0.45));}
     .overlay-blue{background:linear-gradient(135deg, rgba(95,150,255,0.45), rgba(65,120,255,0.38));}
     .overlay-purple{background:linear-gradient(135deg, rgba(200,140,255,0.45), rgba(145,86,255,0.36));}
+    @media (max-width:1200px){ .section{grid-template-columns:1fr;max-width:96vw;} }
     @media (max-width:960px){ .sidebar{width:98vw;max-width:98vw;} .dashboard-bg{padding:10px;} }
   </style>
 </head>
@@ -252,7 +290,6 @@
     </section>
   </main>
   <script>
-    // Time (IST) update, optional
     function updateIST() {
       const now = new Date();
       const utc = now.getTime() + (now.getTimezoneOffset() * 60000);
@@ -272,4 +309,3 @@
   </script>
 </body>
 </html>
-
