--- a/index.html
+++ b/index.html
@@ -136,45 +136,45 @@
       <a href="#" style="color:#fff;text-decoration:none;font-weight:600">MSP</a>
       <a href="#" style="color:#fff;text-decoration:none;font-weight:600">Yield Comparison</a>
     </nav>
+    <!-- NEW: RELIABLE IMAGES -->
     <section class="grid" aria-label="Features">
-      <!-- 8 dashboard cards -->
       <a class="big-card overlay-green" href="seeds.html"
-        style="background-image:url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=600');">
+        style="background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80');">
         <div class="title">Seeds Availability</div>
         <div class="desc">Find certified seeds & local vendors near your village.</div>
       </a>
       <a class="big-card overlay-yellow" href="schemes.html"
-        style="background-image:url('https://images.unsplash.com/photo-1496449903677-6b5f0dcd1d2c?auto=format&fit=crop&w=600');">
+        style="background-image:url('https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80');">
         <div class="title">Govt Schemes & Policies</div>
         <div class="desc">Check eligibility, subsidies and applications for your area.</div>
       </a>
       <a class="big-card overlay-blue" href="weather.html"
-        style="background-image:url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=600');">
+        style="background-image:url('https://images.unsplash.com/photo-1469796466635-455ede028aca?auto=format&fit=crop&w=600&q=80');">
         <div class="title">Weather Forecast</div>
         <div class="desc">7-day forecasts & alerts for drought, rainfall and heatwaves.</div>
       </a>
       <a class="big-card overlay-purple" href="calendar.html"
-        style="background-image:url('https://images.unsplash.com/photo-1441974231531-c6227db76b6e?auto=format&fit=crop&w=600');">
+        style="background-image:url('https://images.unsplash.com/photo-1465101162946-4377e57745c3?auto=format&fit=crop&w=600&q=80');">
         <div class="title">Crop Calendar</div>
         <div class="desc">Regional sowing & harvesting schedules tailored for you.</div>
       </a>
       <a class="big-card overlay-green" href="fertilizer.html"
-        style="background-image:url('https://images.unsplash.com/photo-1517976487492-5750f3195933?auto=format&fit=crop&w=600');">
+        style="background-image:url('https://images.unsplash.com/photo-1505731139092-956a13636ca6?auto=format&fit=crop&w=600&q=80');">
         <div class="title">Fertilizer & Pest Advisory</div>
         <div class="desc">Soil-based recommendations & early pest warnings.</div>
       </a>
       <a class="big-card overlay-blue" href="soil.html"
-        style="background-image:url('https://images.unsplash.com/photo-1469474968028-56623f02e42e?auto=format&fit=crop&w=600');">
+        style="background-image:url('https://images.unsplash.com/photo-1506784365847-bbad939e9335?auto=format&fit=crop&w=600&q=80');">
         <div class="title">Soil Health</div>
         <div class="desc">Upload soil reports & get improvement plans.</div>
       </a>
       <a class="big-card overlay-green" href="msp.html"
-        style="background-image:url('https://images.unsplash.com/photo-1541534401786-3a00e1bf8e6b?auto=format&fit=crop&w=600');">
+        style="background-image:url('https://images.unsplash.com/photo-1508873699372-7aeab60b44c9?auto=format&fit=crop&w=600&q=80');">
         <div class="title">MSP & Market Rates</div>
         <div class="desc">Daily mandi rates, eNAM prices, and trend charts.</div>
       </a>
       <a class="big-card overlay-purple" href="yield.html"
-        style="background-image:url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=600');">
+        style="background-image:url('https://images.unsplash.com/photo-1506784983877-45594efa4cbe?auto=format&fit=crop&w=600&q=80');">
         <div class="title">Yield Comparison</div>
         <div class="desc">Compare historical yields and forecast potential improvements.</div>
       </a>
@@ -243,46 +243,46 @@
         </div>
       </aside>
     </section>
-    <!-- DASHBOARD GRID ON MAIN PAGE -->
+    <!-- DASHBOARD GRID ON MAIN PAGE, NEW IMAGES -->
     <section class="dashboard-bg">
       <section class="grid" aria-label="Features">
         <a class="big-card overlay-green" href="seeds.html"
-          style="background-image:url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=600');">
+          style="background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80');">
           <div class="title">Seeds Availability</div>
           <div class="desc">Find certified seeds & local vendors near your village.</div>
         </a>
         <a class="big-card overlay-yellow" href="schemes.html"
-          style="background-image:url('https://images.unsplash.com/photo-1496449903677-6b5f0dcd1d2c?auto=format&fit=crop&w=600');">
+          style="background-image:url('https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=600&q=80');">
           <div class="title">Govt Schemes & Policies</div>
           <div class="desc">Check eligibility, subsidies and applications for your area.</div>
         </a>
         <a class="big-card overlay-blue" href="weather.html"
-          style="background-image:url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=600');">
+          style="background-image:url('https://images.unsplash.com/photo-1469796466635-455ede028aca?auto=format&fit=crop&w=600&q=80');">
           <div class="title">Weather Forecast</div>
           <div class="desc">7-day forecasts & alerts for drought, rainfall and heatwaves.</div>
         </a>
         <a class="big-card overlay-purple" href="calendar.html"
-          style="background-image:url('https://images.unsplash.com/photo-1441974231531-c6227db76b6e?auto=format&fit=crop&w=600');">
+          style="background-image:url('https://images.unsplash.com/photo-1465101162946-4377e57745c3?auto=format&fit=crop&w=600&q=80');">
           <div class="title">Crop Calendar</div>
           <div class="desc">Regional sowing & harvesting schedules tailored for you.</div>
         </a>
         <a class="big-card overlay-green" href="fertilizer.html"
-          style="background-image:url('https://images.unsplash.com/photo-1517976487492-5750f3195933?auto=format&fit=crop&w=600');">
+          style="background-image:url('https://images.unsplash.com/photo-1505731139092-956a13636ca6?auto=format&fit=crop&w=600&q=80');">
           <div class="title">Fertilizer & Pest Advisory</div>
           <div class="desc">Soil-based recommendations & early pest warnings.</div>
         </a>
         <a class="big-card overlay-blue" href="soil.html"
-          style="background-image:url('https://images.unsplash.com/photo-1469474968028-56623f02e42e?auto=format&fit=crop&w=600');">
+          style="background-image:url('https://images.unsplash.com/photo-1506784365847-bbad939e9335?auto=format&fit=crop&w=600&q=80');">
           <div class="title">Soil Health</div>
           <div class="desc">Upload soil reports & get improvement plans.</div>
         </a>
         <a class="big-card overlay-green" href="msp.html"
-          style="background-image:url('https://images.unsplash.com/photo-1541534401786-3a00e1bf8e6b?auto=format&fit=crop&w=600');">
+          style="background-image:url('https://images.unsplash.com/photo-1508873699372-7aeab60b44c9?auto=format&fit=crop&w=600&q=80');">
           <div class="title">MSP & Market Rates</div>
           <div class="desc">Daily mandi rates, eNAM prices, and trend charts.</div>
         </a>
         <a class="big-card overlay-purple" href="yield.html"
-          style="background-image:url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=600');">
+          style="background-image:url('https://images.unsplash.com/photo-1506784983877-45594efa4cbe?auto=format&fit=crop&w=600&q=80');">
           <div class="title">Yield Comparison</div>
           <div class="desc">Compare historical yields and forecast potential improvements.</div>
         </a>
